Refactor TestRunProject and Nature to TestCampaign
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner/trunk@203 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/plugin.xml
+++ b/plugin.xml
@@ -2,12 +2,12 @@
 <?eclipse version="3.4"?>
 <plugin>
    <extension
-         id="org.globaltester.testrunner.gtTestRunNature"
-         name="GT TestRun Nature"
+         id="org.globaltester.testrunner.gtTestCampaignNature"
+         name="GT TestCampaign Nature"
          point="org.eclipse.core.resources.natures">
       <runtime>
          <run
-               class="org.globaltester.testrunner.GtTestRunNature">
+               class="org.globaltester.testrunner.GtTestCampaignNature">
          </run>
       </runtime>
    </extension>
