refactor CreateExecutionProjectCommand to CreateTestCampaignCommand
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner.ui/trunk@242 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/plugin.xml
+++ b/plugin.xml
@@ -9,9 +9,9 @@
             name="Run Test">
       </command>
       <command
-            defaultHandler="org.globaltester.testrunner.ui.commands.CreateExecutionProjectCommandHandler"
-            id="org.globaltester.testrunner.ui.commands.CreateExecutionProjectCommand"
-            name="Create Execution Project">
+            defaultHandler="org.globaltester.testrunner.ui.commands.CreateTestCampaignCommandHandler"
+            id="org.globaltester.testrunner.ui.commands.CreateTestCampaignCommand"
+            name="Create TestCampaign">
       </command>
    </extension>
    <extension
@@ -25,8 +25,8 @@
                tooltip="Some tooltip text">
          </command>
          <command
-               commandId="org.globaltester.testrunner.ui.commands.CreateExecutionProjectCommand"
-               label="Create Execution Project"
+               commandId="org.globaltester.testrunner.ui.commands.CreateTestCampaignCommand"
+               label="Create TestCampaign"
                style="push"
                tooltip="Some tooltip text">
          </command>
