associate TestCampaignEditor with TestCampaign files
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner/trunk@275 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/plugin.xml
+++ b/plugin.xml
@@ -11,4 +11,20 @@
          </run>
       </runtime>
    </extension>
+   <extension
+         point="org.eclipse.core.contenttype.contentTypes">
+      <content-type
+            file-extensions="xml"
+            id="org.globaltester.testrunner.contenttypes.TestCampaign"
+            name="GlobalTester TestCampaign"
+            priority="normal">
+         <describer
+               class="org.eclipse.core.runtime.content.XMLRootElementContentDescriber2">
+            <parameter
+                  name="element"
+                  value="TestCampaign">
+            </parameter>
+         </describer>
+      </content-type>
+   </extension>
 </plugin>
