--- a/plugin.xml
+++ b/plugin.xml
@@ -37,8 +37,12 @@
       <editor
             class="org.globaltester.testrunner.ui.editor.TestCampaignEditor"
             default="false"
+            extensions="xml"
             id="org.globaltester.testrunner.ui.testcampaigneditor"
             name="GT TestCampaign Editor">
+         <contentTypeBinding
+               contentTypeId="org.globaltester.testrunner.contenttypes.TestCampaign">
+         </contentTypeBinding>
       </editor>
    </extension>
 </plugin>
