--- a/plugin.xml
+++ b/plugin.xml
@@ -36,7 +36,7 @@
          point="org.eclipse.ui.editors">
       <editor
             class="org.globaltester.testrunner.ui.editor.TestCampaignEditor"
-            default="false"
+            default="true"
             extensions="xml"
             id="org.globaltester.testrunner.ui.testcampaigneditor"
             name="GT TestCampaign Editor">
