update testspec and testcampaign icons
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner.ui/trunk@312 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/plugin.xml
+++ b/plugin.xml
@@ -38,7 +38,7 @@
             class="org.globaltester.testrunner.ui.editor.TestCampaignEditor"
             default="true"
             extensions="xml"
-            icon="icons/testcampain.png"
+            icon="icons/testcampaign.png"
             id="org.globaltester.testrunner.ui.testcampaigneditor"
             name="GT TestCampaign Editor">
          <contentTypeBinding
