update content types and file associations for TestCampaigns and TestSpecs
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner/trunk@315 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/plugin.xml
+++ b/plugin.xml
@@ -14,6 +14,7 @@
    <extension
          point="org.eclipse.core.contenttype.contentTypes">
       <content-type
+            base-type="org.eclipse.core.runtime.xml"
             file-extensions="xml"
             id="org.globaltester.testrunner.contenttypes.TestCampaign"
             name="GlobalTester TestCampaign"
