add Run Testcase action for the menu //ToDo finalize run(IAction action) method
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner.ui/trunk@460 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/plugin.xml
+++ b/plugin.xml
@@ -35,6 +35,32 @@
       </menuContribution>
    </extension>
    <extension
+		point="org.eclipse.ui.actionSets">
+   
+		<actionSet
+			id="org.globaltester.testrunner.ui.commands.RunTestCommand"
+			label="GT Action Set"
+			visible="true">
+			
+			<action
+         		icon="icons/execute.png"
+         		class="org.globaltester.testrunner.ui.commands.RunTestCommandHandler"
+         		id="org.globaltester.testrunner.ui.commands.RunTestCommandHandler"
+         		label="Run Test"
+         		toolbarPath="GlobalTester Group"
+         		tooltip="Run Test"/>
+		
+			<action
+         		icon="icons/testcampaign.png"
+         		class="org.globaltester.testrunner.ui.commands.CreateTestCampaignCommandHandler"
+         		id="org.globaltester.testrunner.ui.commands.CreateTestCampaignCommandHandler"
+         		label="Create Testcampaign"
+         		toolbarPath="GlobalTester Group"
+         		tooltip="Create Testcampaign"/>
+		</actionSet>
+	</extension>
+   
+   <extension
          point="org.eclipse.ui.editors">
       <editor
             class="org.globaltester.testrunner.ui.editor.TestCampaignEditor"
