add Commands for TestExecution and TestCampaignCreatoin in the toolbar
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner.ui/trunk@507 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/plugin.xml
+++ b/plugin.xml
@@ -23,42 +23,41 @@
                icon="icons/execute.png"
                label="Run Test"
                style="push"
-               tooltip="Some tooltip text">
+               tooltip="Create a new TestCampaing form selection and execute it">
          </command>
          <command
                commandId="org.globaltester.testrunner.ui.commands.CreateTestCampaignCommand"
                icon="icons/testcampaign.png"
                label="Create TestCampaign"
                style="push"
-               tooltip="Some tooltip text">
+               tooltip="Create a new TestCampaing form selection and open it">
          </command>
       </menuContribution>
    </extension>
-   <extension
-		point="org.eclipse.ui.actionSets">
-   
-		<actionSet
-			id="org.globaltester.testrunner.ui.commands.RunTestCommand"
-			label="GT Action Set"
-			visible="true">
-			
-			<action
-         		icon="icons/execute.png"
-         		class="org.globaltester.testrunner.ui.commands.RunTestCommandHandler"
-         		id="org.globaltester.testrunner.ui.commands.RunTestCommandHandler"
-         		label="Run Test"
-         		toolbarPath="GlobalTester Group"
-         		tooltip="Run Test"/>
-		
-			<action
-         		icon="icons/testcampaign.png"
-         		class="org.globaltester.testrunner.ui.commands.CreateTestCampaignCommandHandler"
-         		id="org.globaltester.testrunner.ui.commands.CreateTestCampaignCommandHandler"
-         		label="Create Testcampaign"
-         		toolbarPath="GlobalTester Group"
-         		tooltip="Create Testcampaign"/>
-		</actionSet>
-	</extension>
+   <extension point="org.eclipse.ui.menus">
+        <menuContribution
+            locationURI="toolbar:org.eclipse.ui.main.toolbar">
+            <toolbar
+                  id="org.globaltester.maintoolbar"
+                  label="GlobalTester Toolbar">
+                <command
+                   commandId="org.globaltester.testrunner.ui.commands.RunTestCommand"
+                   icon="icons/execute.png"
+                   label="Run Test"
+                   style="push"
+                   tooltip="Create a new TestCampaing form selection and execute it">
+                 </command>
+                 <command
+                   commandId="org.globaltester.testrunner.ui.commands.CreateTestCampaignCommand"
+                   icon="icons/testcampaign.png"
+                   label="Create TestCampaign"
+                   style="push"
+                   tooltip="Create a new TestCampaing form selection and open it">
+                 </command>
+            </toolbar>
+        </menuContribution>
+    </extension>
+
    
    <extension
          point="org.eclipse.ui.editors">
