Correction in spelling
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner.ui/trunk@522 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/plugin.xml
+++ b/plugin.xml
@@ -23,14 +23,14 @@
                icon="icons/execute.png"
                label="Run Test"
                style="push"
-               tooltip="Create a new TestCampaing form selection and execute it">
+               tooltip="Create a new TestCampaign form selection and execute it">
          </command>
          <command
                commandId="org.globaltester.testrunner.ui.commands.CreateTestCampaignCommand"
                icon="icons/testcampaign.png"
                label="Create TestCampaign"
                style="push"
-               tooltip="Create a new TestCampaing form selection and open it">
+               tooltip="Create a new TestCampaign form selection and open it">
          </command>
       </menuContribution>
    </extension>
@@ -45,14 +45,14 @@
                    icon="icons/execute.png"
                    label="Run Test"
                    style="push"
-                   tooltip="Create a new TestCampaing form selection and execute it">
+                   tooltip="Create a new TestCampaign form selection and execute it">
                  </command>
                  <command
                    commandId="org.globaltester.testrunner.ui.commands.CreateTestCampaignCommand"
                    icon="icons/testcampaign.png"
                    label="Create TestCampaign"
                    style="push"
-                   tooltip="Create a new TestCampaing form selection and open it">
+                   tooltip="Create a new TestCampaign form selection and open it">
                  </command>
             </toolbar>
         </menuContribution>
