working on help topics (getting started and concepts)
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner.doc/trunk@643 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/plugin.xml
+++ b/plugin.xml
@@ -11,5 +11,18 @@
             name="Run TestCases">
       </cheatsheet>
    </extension>
+   <extension
+         point="org.eclipse.help.toc">
+      <toc
+            file="toc/user/toc.xml"
+            primary="true">
+      </toc>
+      <toc
+            file="toc/user/gettingstarted.xml">
+      </toc>
+      <toc
+            file="toc/user/concepts.xml">
+      </toc>
+   </extension>
 
 </plugin>
