review of CheatSheet
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner.doc/trunk@747 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/plugin.xml
+++ b/plugin.xml
@@ -8,7 +8,7 @@
             composite="false"
             contentFile="cheatsheets/user/runTestCases.xml"
             id="org.globaltester.testrunner.doc.cheatsheet.runTestCases"
-            name="Run TestCases">
+            name="Execute TestCases">
       </cheatsheet>
    </extension>
    <extension
