reviewed Cheat Sheets execute TestCases, Import of a TestSpec, and UserGuide Import of a TestSpec
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner.doc/trunk@754 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/plugin.xml
+++ b/plugin.xml
@@ -6,8 +6,8 @@
       <cheatsheet
             category="org.globaltester.core.doc.userGuide"
             composite="false"
-            contentFile="cheatsheets/user/runTestCases.xml"
-            id="org.globaltester.testrunner.doc.cheatsheet.runTestCases"
+            contentFile="cheatsheets/user/executeTestCases.xml"
+            id="org.globaltester.testrunner.doc.cheatsheet.executeTestCases"
             name="Execute TestCases">
       </cheatsheet>
    </extension>
