moved preferences "single logfile for each testcase" and "double click in result view opens" to preference page in testrunner
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner.ui/trunk@778 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/plugin.xml
+++ b/plugin.xml
@@ -79,4 +79,13 @@
             natureId="org.globaltester.testrunner.gtTestCampaignNature">
       </image>
    </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            category="org.globaltester.core.ui.preferences.GlobalTesterPreferencePage"
+            class="org.globaltester.testrunner.ui.preferences.GlobalTesterPreferencePageTestrunner"
+            id="orgorg.globaltester.testrunner.ui.preferences.GlobalTesterPreferencePageTestrunner.globaltester.testrunner.ui.PreferencePage"
+            name="TestRunner">
+      </page>
+   </extension>
 </plugin>
