--- a/build.properties
+++ b/build.properties
@@ -1,2 +1,5 @@
 bin.includes = META-INF/,\
-               plugin.xml
+               plugin.xml,\
+               toc/,\
+               html/,\
+               cheatsheets/
