Add EditorMatchingStrategy to TestCampaignEditor in order to allow reuse of restored Editors
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner.ui/trunk@991 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/plugin.xml
+++ b/plugin.xml
@@ -65,6 +65,7 @@
             class="org.globaltester.testrunner.ui.editor.TestCampaignEditor"
             icon="icons/testcampaign.png"
             id="org.globaltester.testrunner.ui.testcampaigneditor"
+            matchingStrategy="org.globaltester.testrunner.ui.editor.TestCampaignEditorMatchingStrategy"
             name="GT TestCampaign Editor">
          <contentTypeBinding
                contentTypeId="org.globaltester.testrunner.contenttypes.TestCampaign">
