--- a/plugin.xml
+++ b/plugin.xml
@@ -28,4 +28,20 @@
          </describer>
       </content-type>
    </extension>
+      
+   <extension id="org.globaltester.testrunner.GTMarker"
+                name="GTMarker"
+                point="org.eclipse.core.resources.markers">
+    <attribute name="item"/>
+   </extension>
+   
+   <extension id="org.globaltester.testrunner.GTFailureMarker"
+                name ="GlobalTester Failure"
+                point="org.eclipse.core.resources.markers">
+    <super type="org.globaltester.testrunner.GTMarker" />
+    <super type="org.eclipse.core.resources.problemmarker" />
+    <persistent value="true" />
+    <attribute name="expectedValue" />
+    <attribute name="receivedValue" />              
+   </extension>
 </plugin>
