Handler for JavaScript debugging changed to new class DebugTestCommandHandler
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner.ui/trunk@1275 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/plugin.xml
+++ b/plugin.xml
@@ -14,7 +14,7 @@
          </commandParameter>
       </command>
       <command
-            defaultHandler="org.globaltester.testrunner.ui.commands.RunTestCommandHandler"
+            defaultHandler="org.globaltester.testrunner.ui.commands.DebugTestCommandHandler"
             id="org.globaltester.testrunner.ui.commands.DebugTestCommand"
             name="Debug Test">
          <commandParameter
@@ -45,7 +45,7 @@
                icon="icons/debug-execute.png"
                label="Debug Test"
                style="push"
-               tooltip="Create a new TestCampaign from selection and execute it">
+               tooltip="Create a new TestCampaign from selection and execute and debug it">
          </command>
          <command
                commandId="org.globaltester.testrunner.ui.commands.CreateTestCampaignCommand"
