Renamed .test to .integrationtest (due to SWTBot tests)

--- a/org.globaltester.testrunner.ui.test/.project
+++ b/org.globaltester.testrunner.ui.test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.globaltester.testrunner.ui.test</name>
+	<name>org.globaltester.testrunner.ui.integrationtest</name>
 	<comment></comment>
 	<projects>
 	</projects>
