--- a/org.globaltester.testrunner.ui/plugin.xml
+++ b/org.globaltester.testrunner.ui/plugin.xml
@@ -122,7 +122,7 @@
    <extension
          point="org.eclipse.ui.preferencePages">
       <page
-            category="org.globaltester.core.ui.preferences.GlobalTesterPreferencePage"
+            category="org.globaltester.preferences.GlobalTesterPreferencePage"
             class="org.globaltester.testrunner.ui.preferences.GlobalTesterPreferencePageTestrunner"
             id="orgorg.globaltester.testrunner.ui.preferences.GlobalTesterPreferencePageTestrunner.globaltester.testrunner.ui.PreferencePage"
             name="TestRunner">
