adapt changes due to the refactoring of core.ui to base.ui
-also changed toc anchor to base

--- a/org.globaltester.testrunner.ui/plugin.xml
+++ b/org.globaltester.testrunner.ui/plugin.xml
@@ -32,7 +32,7 @@
    <extension
          point="org.eclipse.ui.menus">
       <menuContribution
-            locationURI="popup:org.globaltester.core.ui.views.GlobalTesterNavigator.PopupMenu?after=group.edit">
+            locationURI="popup:org.globaltester.base.ui.views.GlobalTesterNavigator.PopupMenu?after=group.edit">
          <command
                commandId="org.globaltester.testrunner.ui.commands.RunTestCommand"
                icon="icons/execute.png"
