Add LICENSE and NOTICE to build.properties

--- a/org.globaltester.testrunner.doc/build.properties
+++ b/org.globaltester.testrunner.doc/build.properties
@@ -2,4 +2,8 @@ bin.includes = META-INF/,\
                plugin.xml,\
                toc/,\
                html/,\
-               cheatsheets/
+               cheatsheets/,\
+               LICENSE,\
+               NOTICE
+src.includes = NOTICE,\
+               LICENSE
