--- a/org.globaltester.testrunner/build.properties
+++ b/org.globaltester.testrunner/build.properties
@@ -4,4 +4,8 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/,\
-               stylesheets/
+               stylesheets/,\
+               LICENSE,\
+               NOTICE
+src.includes = LICENSE,\
+               NOTICE
